os/bluestore: bluefs_preextend_wal_files=true

This should merge with the fix for https://tracker.ceph.com/issues/18375

Signed-off-by: Sage Weil <sage@redhat.com>